nginxkedascale/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: httpscaledemo  
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: webapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: webapp
  name: webapp
  namespace: httpscaledemo
spec:
  replicas: 3
  selector:
    matchLabels:
      run: webapp
  strategy: {}
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
      - image: nginx
        name: webapp
